# mefid

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyrightconfig.json
services/api/: Dockerfile  README.md  pyproject.toml
services/api/src/: api_app.py  main_app.py
services/api/src/db/: client.py  supabaseDB.py
services/api/src/routes/: embeddings_route.py  frame_metadata_route.py  frames_route.py  health_route.py  media_route.py  search_queries_route.py  search_route.py  upload_route.py
services/api/src/schema/: __init__.py  models.py  responses.py
services/api/src/schemas/: models.py
services/api/src/service_clients/: __init__.py  caption_client.py  embedder_client.py  indexer_client.py  media_processor_client.py  transcribe_client.py
services/api/tests/: test_fusion.py  test_search_helpers.py
services/caption/: Dockerfile  README.md  pyproject.toml  pyrightconfig.json
services/caption/notebooks/: caption_validation.ipynb
services/caption/src/: caption_app.py  caption_engine.py  caption_service.py
services/caption/src/pipeline/: __init__.py  caption_generation.py  frame_extraction.py  merge_gate.py  scene_detection.py  token_budget.py  types.py  windowing.py
services/caption/src/routes/: __init__.py  caption.py
services/caption/tests/: test_caption_generation.py  test_caption_service.py  test_frame_extraction.py  test_merge_gate.py  test_scene_detection.py  test_token_budget.py  test_windowing.py
services/embedder/: Dockerfile  pyproject.toml
services/embedder/src/: __init__.py  clip_service.py  embedder_app.py  lifespan.py
services/embedder/src/routes/: __init__.py  embed_image.py  embed_text.py  embed_text_batch.py  ready.py
services/embedder/tests/: test_clip_helpers.py  test_embed_integration.py  test_embed_routes_validation.py
services/exports/: README.md  pyproject.toml
services/exports/src/: __init__.py
services/exports/src/db_clients/: db_client.py  lifespan.py  minioDB.py  supabaseDB.py
services/exports/src/exports/: faiss_store.py
services/exports/src/exports/db_clients/: db_client.py  lifespan.py  minioDB.py  supabaseDB.py
services/exports/src/exports/fusion/: __init__.py  classifier.py  pipeline.py  types.py
services/exports/src/exports/schema/: constants.py  models.py
services/exports/src/exports/utils/: transcript_chunking.py
services/exports/src/schema/: constants.py  models.py
services/indexer/: Dockerfile  pyproject.toml
services/indexer/src/: indexer_app.py
services/indexer/src/routes/: add.py  search.py  stats.py
services/media_processor/: Dockerfile  pyproject.toml
services/media_processor/src/: media_processor_app.py
services/media_processor/src/extractors_techniques/: fixed_interval.py  hybrid.py  scene_based.py
services/media_processor/src/routes/: extract.py
services/media_processor/src/sampling/: __init__.py  adaptive_threshold.py  deduplication.py  hybrid_sampler.py  phash_utils.py
services/media_processor/src/utils/: extract_video_duration.py  video_utils.py
services/media_processor/tests/: test_adaptive_threshold.py  test_hybrid_sampler.py  test_phash_utils.py  test_sample_guard.py
services/transcribe/: Dockerfile  pyproject.toml
services/transcribe/src/: transcribe_app.py  whisper_service.py
services/transcribe/src/routes/: __init__.py  ready.py  transcribe.py
services/transcribe/tests/: test_pipeline_models.py  test_transcript_chunking.py
