[project]
name = "api"
version = "0.1.0"
description = "API service for Mefid platform"
readme = "README.md"
requires-python = ">=3.10"

# Dependencies for the API service
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.22.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "minio>=7.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py310']