[project]
name = "exports"
version = "0.1.0"
description = "Shared DTOs, models, db clients and constants for all Mefid services"
readme = "README.md"
requires-python = ">=3.11"

# Dependencies needed by your shared models
dependencies = [
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "miniopy-async>=1.0.0",
    "supabase>=2.4.0",
    "faiss-cpu>=1.7.0",
    "numpy>=1.24.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
